# tensorrtx

./: .gitignore
yolov5/: CMakeLists.txt  gen_wts.py  inference  yolov5_trt.py
yolov5/include/: common.hpp  createEngine.hpp  logging.h  utils.h  yololayer.h
yolov5/lib/: common.tpp  createEngine_l.tpp  createEngine_m.tpp  createEngine_m_9.tpp  createEngine_s.tpp  createEngine_t.tpp  createEngine_x.tpp
yolov5/src/: yololayer.cu  yolov5.cpp
